js/js.translator/testData/incremental/invalidation/splitJoinModuleWithCrossModuleInliner/lib1-b/l1b.2.kt
inline fun fooB() = 3
